<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/month_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_month_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/previous_month"
            android:cropToPadding="true"
            android:paddingTop="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/cal_previous" />

        <Button
            android:id="@+id/month_label"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="15"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/next_month_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/next_month"
            android:paddingTop="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/cal_next" />

        <ImageButton
            android:id="@+id/history_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:contentDescription="@string/history"
            android:scaleType="centerInside"
            android:src="@drawable/cal_calendar" />

        <ImageButton
            android:id="@+id/add_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:contentDescription="@string/add"
            android:scaleType="centerInside"
            android:src="@drawable/cal_plus" />

        <ImageButton
            android:id="@+id/delete_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:contentDescription="@string/delete"
            android:scaleType="centerInside"
            android:src="@drawable/cal_delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

</LinearLayout>
